fix: visualização de temas no menu dropdown em editar postagem

--- a/redePets-frontend/src/app/component/delete/postagem-delete/postagem-delete.component.html
+++ b/redePets-frontend/src/app/component/delete/postagem-delete/postagem-delete.component.html
@@ -20,11 +20,11 @@
 
                     <h5 class="card-title m-0">{{postagem.titulo}}</h5>
 
-                    <small class="text-muted">Tema:{{postagem.tema.descricao}}</small>
+                    <small class="text-muted">Tema: {{postagem.tema.nome}}</small>
 
                    <p class="card-text m-3">{{postagem.texto}}</p>
                 <p class="card-text"> <small class="text-muted">
-                    {{postagem.data | date:" dd/MM/yyyy"}} as {{postagem.data | date: "HH:mm}}</small></p>
+                    {{postagem.data | date: "dd/MM/yyyy"}} às {{postagem.data | date: "HH:mm"}}</small></p>
 
                 </div>
 
