--- a/redePets-frontend/src/app/component/edit/postagem-edit/postagem-edit.component.html
+++ b/redePets-frontend/src/app/component/edit/postagem-edit/postagem-edit.component.html
@@ -13,26 +13,26 @@
         <div class="form-group">
             <label for="titulo">Título</label>
             <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título">
-            </div>   
-    
+            </div>
+
             <div class="form-group">
                 <label for="texto">Texto</label>
                <textarea [(ngModel)]="postagem.texto"class="form-control" name="texto" id="texto" rows="3"></textarea>
-                </div> 
-                
+                </div>
+
                 <div class="form-group">
                 <label for="texto">Escolha um tema ou  <a data-dismiss="modal" routerLink="/tema">Cadastre um novo</a>:</label>
                 <select class="form-control" name="tema" id="tema" [(ngModel)]="idTema" (change)="findByIdTema()">
-                <option *ngFor='let item of listaTemas'value="{{item.id}}">{{item.descricao}}</option>
+                <option *ngFor='let item of listaTemas'value="{{item.id}}">{{item.nome}}</option>
                 </select>
                 </div>
-            
+
                 <div class="d-flex justify-content-center">
                     <button class="btn btn-danger mr-4" routerLink="/inicio">Cancelar</button>
                     <button class="btn btn-info" (click)="atualizar()">Atualizar</button>
-    
+
                 </div>
-        
+
     </div>
 </div>
 
