--- a/redePets-frontend/src/app/component/rodape/rodape.component.html
+++ b/redePets-frontend/src/app/component/rodape/rodape.component.html
@@ -9,16 +9,18 @@
             <div class="col-md-12 d-flex justify-content-center">
                 <ul class="social-network">
                   <li>
+                    <i class="devicon-java-plain fa fa-java-square"></i>
+                  </li>
+                  <li>
                     <i class="devicon-spring-plain fa fa-spring-square"></i>
                   </li>
+                  <li>
                     <i class="devicon-bootstrap-plain colored fa fa-bootstrap"></i>
+                  </li>
                   <li>
                     <i class="devicon-angularjs-plain colored fa fa-angular-square"></i>
                   </li>
 
-                  <li>
-                    
-                  </li>
                 </ul>
             </div>
         </div>
