--- a/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
+++ b/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
@@ -40,7 +40,7 @@
 
               <div class="card-body cor-marrom-claro">
                 <h5 class="card-title text-center font-weight-bold">{{nome}}</h5>
-                <p class="card-text text-center font-italic">Quero adotar</p>
+                <p class="card-text text-center font-italic">Quero: {{tipo}}</p>
               </div>
 
             </div>
